k8s/overlays/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: skeever-web
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
    nginx.ingress.kubernetes.io/backend-protocol: 'HTTP'
    nginx.ingress.kubernetes.io/proxy-body-size: '50m'
    # Cloudflare specific settings
    nginx.ingress.kubernetes.io/use-forwarded-headers: 'true'
    nginx.ingress.kubernetes.io/enable-real-ip: 'true'
    nginx.ingress.kubernetes.io/real-ip-header: 'X-Forwarded-For'
    nginx.ingress.kubernetes.io/proxy-real-ip-cidr: '173.245.48.0/20,103.21.244.0/22,103.22.200.0/22,103.31.4.0/22,141.101.64.0/18,108.162.192.0/18,190.93.240.0/20,188.114.96.0/20,197.234.240.0/22,198.41.128.0/17,162.158.0.0/15,104.16.0.0/13,104.24.0.0/14,172.64.0.0/13,131.0.72.0/22'
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - skeever.net
      secretName: skeever-web-staging-tls
  rules:
    - host: skeever.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: skeever-web-staging
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: skeever-api
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
    nginx.ingress.kubernetes.io/backend-protocol: 'HTTP'
    nginx.ingress.kubernetes.io/proxy-body-size: '50m'
    # Cloudflare specific settings
    nginx.ingress.kubernetes.io/use-forwarded-headers: 'true'
    nginx.ingress.kubernetes.io/enable-real-ip: 'true'
    nginx.ingress.kubernetes.io/real-ip-header: 'X-Forwarded-For'
    nginx.ingress.kubernetes.io/proxy-real-ip-cidr: '173.245.48.0/20,103.21.244.0/22,103.22.200.0/22,103.31.4.0/22,141.101.64.0/18,108.162.192.0/18,190.93.240.0/20,188.114.96.0/20,197.234.240.0/22,198.41.128.0/17,162.158.0.0/15,104.16.0.0/13,104.24.0.0/14,172.64.0.0/13,131.0.72.0/22'
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - api.skeever.net
      secretName: skeever-api-staging-tls
  rules:
    - host: api.skeever.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: skeever-api-staging
                port:
                  number: 80
